refactor: exceptions && client errors render
