# app/Http/Controllers/Api/Account/PasswordChangeController.php
@@ -4,13 +4,10 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers\Api\Account;
 
-use App\Mail\User\PasswordChangeConfirmationMail;
+use App\Http\Requests\Auth\ChangePasswordRequest;
 use App\Models\User;
+use App\Services\Internal\UserService;
 use Illuminate\Http\JsonResponse;
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Hash;
-use Illuminate\Support\Facades\Mail;
-use Illuminate\Support\Facades\Validator;
 use Symfony\Component\HttpFoundation\Response;
 use OpenApi\Attributes as OA;
 
@@ -24,26 +21,7 @@ class PasswordChangeController
             requestBody: new OA\RequestBody(
                 required: true,
                 content: [
-                    new OA\JsonContent(
-                        required: ['old_password', 'password', 'password_confirmation'],
-                        properties: [
-                            new OA\Property(
-                                property: 'old_password',
-                                description: 'User\'s old password',
-                                type: 'string'
-                            ),
-                            new OA\Property(
-                                property: 'password',
-                                description: 'User\'s new password',
-                                type: 'string'
-                            ),
-                            new OA\Property(
-                                property: 'password_confirmation',
-                                description: 'Confirmation of the new password',
-                                type: 'string'
-                            ),
-                        ]
-                    )
+                    new OA\JsonContent(ref: '#/components/schemas/ChangePasswordRequest')
                 ]
             ),
             tags: ['Auth'],
@@ -61,18 +39,12 @@ class PasswordChangeController
                     description: 'Password changed successfully',
                     content: [
                         new OA\JsonContent(
-                            properties: [
-                                new OA\Property(
-                                    property: 'message',
-                                    description: 'Success message',
-                                    type: 'string'
-                                )
-                            ],
-                            type: 'object'
+                            type: 'object',
+                            example: ['message' => 'success']
                         )
                     ]
                 ),
-                new OA\Response(response: Response::HTTP_NOT_FOUND, description: 'Watcher not found'),
+                new OA\Response(response: Response::HTTP_NOT_FOUND, description: 'User not found'),
                 new OA\Response(
                     response: Response::HTTP_UNPROCESSABLE_ENTITY,
                     description: 'Unprocessable entity',
@@ -90,28 +62,11 @@ class PasswordChangeController
             ]
         )
     ]
-    public function __invoke(Request $request, User $user): JsonResponse
+    public function __invoke(ChangePasswordRequest $request, User $user): JsonResponse
     {
-        $validator = Validator::make($request->only('old_password', 'password', 'password_confirmation'), [
-            'old_password' => 'required',
-            'password' => 'required|confirmed'
-        ]);
+        UserService::withUser($user)
+            ->changePassword($request->all());
 
-        $validator->validate();
-
-        if (Hash::check($request->old_password, $user->password)) {
-
-            $user->update(['password' => Hash::make($request->password)]);
-            Mail::to($user->email)->send(new PasswordChangeConfirmationMail);
-
-            return new JsonResponse(['message' => 'success'], Response::HTTP_OK);
-
-        }
-
-        return new JsonResponse([
-            'error' => [
-                'auth' => [__('auth.failed')]
-            ]
-        ], Response::HTTP_UNPROCESSABLE_ENTITY);
+        return new JsonResponse(['message' => __('actions.account.password.update')], Response::HTTP_OK);
     }
 }
